# DL_approach_handwriting

./: .env.example  .gitignore  README.md  check_gpu.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_env.ps1  setup_env.sh
.github/workflows/: docker-build.yml
.hydra/: config.yaml  hydra.yaml
Result_analysis/: analysis.ipynb
conf/: config.yaml  config.yaml.backup  split_config.yaml
conf/data/: default.yaml
conf/model/: attention.yaml  lstm.yaml
conf/training/: default.yaml
config/: main.yaml
config/model/: model1.yaml  model2.yaml
config/process/: process1.yaml  process2.yaml
data_analysis/: data.ipynb
s3_operations/: __init__.py  s3_handler.py  s3_io.py
src/: main.py  process.py  train_model.py  utils.py
src/data/: __init__.py  balanced_batch.py  data_augmentation.py  datamodule.py  stratified_k_fold.py
src/explainability/: model_explainer.py
src/models/: GRU.py  LSTM.py  RNN.py  XLSTM.py  __init__.py  attention_RNN.py  attention_module.py  base.py  han.py  han_attention.py  hat_net.py  liquid_neural_net.py  simpleRNN.py  transformer_model.py
src/utils/: __init__.py  callbacks.py  config_operations.py  majority_vote.py  model_factory.py  print_info.py  trainer_visualizer.py  wandb_utils.py
