[project]
name = "handwriting-analysis"
version = "0.1.0"
description = "A deep learning approach to analyze handwriting data for health status classification"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
authors = [
    { name = "Narden91", email = "" }
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "transformers>=4.30.0",
    "wandb>=0.15.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "shap>=0.39.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "pyyaml>=6.0.0",
    "boto3>=1.34.113",
    "python-dotenv>=1.0.1",
    "torchmetrics>=0.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.3.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

docs = [
    "mkdocs>=1.4.0",
    "mkdocstrings>=0.20.0",
]

[build-system]
requires = ["setuptools>=69.0.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
